--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -64,5 +64,5 @@
   "runology.rune_types.runology.shape": "Shape",
   "runology.rune_types.runology.motion": "Motion",
 
-  "misc.runology.power_activate": "I feel power flowing through my body, building up at my fists, whatever this power is... It may be whats needed."
+  "misc.runology.power_activate": "I feel power flowing through my body, building up at my fists, whatever this power is... It may be what is needed."
 }
