movement of shattered_shard entry to a new shards tab

--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -29,6 +29,7 @@
   "modonomicon.runology.guidebook.discover": "I feel a strange and mysterious force... For whatever reason, I feel as if I should imbue a book with this power.",
 
   "modonomicon.runology.guidebook.basics.name": "Basics",
+  "modonomicon.runology.guidebook.shards.name": "Shards",
 
   "modonomicon.runology.guidebook.basics.guidebook.name": "Knowledge",
   "modonomicon.runology.guidebook.basics.guidebook.page0.title": "Knowledge",
