--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -13,6 +13,8 @@
   "block.runology.rune_frost_shatterstone": "Shatterstone Frost Rune",
   "block.runology.rune_shape_shatterstone": "Shatterstone Shape Rune",
   "block.runology.rune_motion_shatterstone": "Shatterstone Motion Rune",
+  "block.runology.shattered_shard_ore": "Shattered Shard Ore",
+  "block.runology.deepslate_shattered_shard_ore": "Shattered Shard Ore",
 
   "item.runology.gold_chisel": "Gold Chisel",
   "item.runology.runic_chisel": "Runic Chisel",
