--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -65,7 +65,7 @@
   "modonomicon.runology.guidebook.basics.shatterstone_runes.page0.text": "Using the Runic Chisel, I can carve runes into Shatterstone, allowing me to channel Shattered Flow properly.",
   "modonomicon.runology.guidebook.basics.reality_reshaper.name": "Reality Reshaper",
   "modonomicon.runology.guidebook.basics.reality_reshaper.page0.title": "Reality Reshaper",
-  "modonomicon.runology.guidebook.basics.reality_reshaper.page0.text": "While Shatters are useful, sometimes they may be created at an inconvenient location. This Reality Reshaper structure will allow me to remove a Shatter and potentially gain something useful... although... I feel as if it wont go peacefully...",
+  "modonomicon.runology.guidebook.basics.reality_reshaper.page0.text": "While Shatters are useful, sometimes they may be created at an inconvenient location. This Reality Reshaper structure will allow me to remove a Shatter and I might even gain something incredibly useful... although... I feel as if it wont go peacefully...",
   "modonomicon.runology.guidebook.shards.shattered_shard.name": "Shattered Shard",
   "modonomicon.runology.guidebook.shards.shattered_shard.page0.title": "Shattered Shard",
   "modonomicon.runology.guidebook.shards.shattered_shard.page0.text": "Shattered Shards... A physical manifestation of shattered flow. Utilizing this may be the key to more advanced magic.",
