a handful of recipe improvements and minor book grammar touchups

--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -53,12 +53,12 @@
   "modonomicon.runology.guidebook.basics.runic_chisel.name": "Runic Chisel",
   "modonomicon.runology.guidebook.basics.runic_chisel.page0.title": "Runic Chisel",
   "modonomicon.runology.guidebook.basics.runic_chisel.page0.text": "While I know about runes, I do not have a method to create them, a Runic Chisel will work, to obtain one, I will have to imbue a gold chisel with Shattered Flow.",
-  "modonomicon.runology.guidebook.basics.shattered_flow.name": "Shattered Flow",
-  "modonomicon.runology.guidebook.basics.shattered_flow.page0.title": "Shattered Flow",
-  "modonomicon.runology.guidebook.basics.shattered_flow.page0.text": "That energy I felt nearby a Shatter... It was powerful yet dangerous and otherworldly, this energy... I will call it \"Shattered Flow\" however I will need a method to move it around, Shattered Focuses and Shattered Relays will work!",
-  "modonomicon.runology.guidebook.basics.shattered_infuser.name": "Shattered Infuser",
-  "modonomicon.runology.guidebook.basics.shattered_infuser.page0.title": "Shattered Infuser",
-  "modonomicon.runology.guidebook.basics.shattered_infuser.page0.text": "Now that I am able to move around Shattered Flow, It may be useful to be able to charge items with it without having to walk all the way to a Shatter, the Shattered Infuser will allow me to do this at the cost of 50 Shattered Flow to run.",
+  "modonomicon.runology.guidebook.shards.shattered_flow.name": "Shattered Flow",
+  "modonomicon.runology.guidebook.shards.shattered_flow.page0.title": "Shattered Flow",
+  "modonomicon.runology.guidebook.shards.shattered_flow.page0.text": "That energy I felt nearby a Shatter... It was powerful yet dangerous and otherworldly, this energy... I will call it \"Shattered Flow\" however I will need a method to move it around, Shattered Focuses and Shattered Relays will work!",
+  "modonomicon.runology.guidebook.shards.shattered_infuser.name": "Shattered Infuser",
+  "modonomicon.runology.guidebook.shards.shattered_infuser.page0.title": "Shattered Infuser",
+  "modonomicon.runology.guidebook.shards.shattered_infuser.page0.text": "Now that I am able to move around Shattered Flow, It may be useful to be able to charge items with it without having to walk all the way to a Shatter, the Shattered Infuser will allow me to do this at the cost of 50 Shattered Flow to run.",
   "modonomicon.runology.guidebook.basics.shatter_reader.name": "Shatter Reader",
   "modonomicon.runology.guidebook.basics.shatter_reader.page0.title": "Shatter Reader",
   "modonomicon.runology.guidebook.basics.shatter_reader.page0.text": "With how Shatters output a limited number of Shattered Flow and have stability to them, it may be useful to create a tool to let me measure a Shatters Stability, Power, and Output.",
