grammar touchups for real

--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -40,47 +40,47 @@
 
   "modonomicon.runology.guidebook.basics.guidebook.name": "Knowledge",
   "modonomicon.runology.guidebook.basics.guidebook.page0.title": "Knowledge",
-  "modonomicon.runology.guidebook.basics.guidebook.page0.text": "After imbuing that strange power into a book, I have obtained powerful knowledge, this path, it may lead me to power! However... I can't help but wonder... What is that voice in my head telling me all of this?",
+  "modonomicon.runology.guidebook.basics.guidebook.page0.text": "After imbuing that strange power into a book, I have obtained powerful knowledge. This path may lead me to power! However... I can't help but wonder... What is that voice in my head telling me all of this?",
   "modonomicon.runology.guidebook.basics.shatters.name": "Shatters",
   "modonomicon.runology.guidebook.basics.shatters.page0.title": "Shatters",
-  "modonomicon.runology.guidebook.basics.shatters.page0.text": "These holes in space appear to lead to somewhere else, while I may not be able to cross them, I may be able to extract energy from them. I will call this energy \"Shattered Flow\" however if I attempt to drain too much Shattered Flow from one, it may become unstable...",
+  "modonomicon.runology.guidebook.basics.shatters.page0.text": "These holes in space appear to lead to somewhere else. While I may not be able to cross them, I may be able to extract energy from them. I will call this energy \"Shattered Flow\". If I attempt to drain too much Shattered Flow from one, it may become unstable...",
   "modonomicon.runology.guidebook.basics.basic_runes.name": "Basic Runes",
   "modonomicon.runology.guidebook.basics.basic_runes.page0.title": "Basic Runes",
-  "modonomicon.runology.guidebook.basics.basic_runes.page0.text": "There are 4 runes I can utilize to manipulate the world: [#](ff5d00)Heat[#](), [#](00d1ff)Frost[#](), [#](00ff00)Shape[#]() and [#](ffd100)Motion[#](). Utilizing these 4 is powerful but there has to be more...",
+  "modonomicon.runology.guidebook.basics.basic_runes.page0.text": "There are 4 runes I can utilize to manipulate the world: [#](ff5d00)Heat[#](), [#](00d1ff)Frost[#](), [#](00ff00)Shape[#](), and [#](ffd100)Motion[#](). Utilizing these 4 is powerful but there has to be more...",
   "modonomicon.runology.guidebook.basics.shatterstone.name": "Shatterstone",
   "modonomicon.runology.guidebook.basics.shatterstone.page0.title": "Shatterstone",
-  "modonomicon.runology.guidebook.basics.shatterstone.page0.text": "This stone... I have never seen it before however after discovering a shatter, I have started seeing it everywhere in caves... Is there more to this world than what I can see?",
+  "modonomicon.runology.guidebook.basics.shatterstone.page0.text": "This stone... I have never seen it before! But now that I've discovered a shatter, I see that it's everywhere in the caves... is there more to this world than what I can see?",
   "modonomicon.runology.guidebook.basics.runic_chisel.name": "Runic Chisel",
   "modonomicon.runology.guidebook.basics.runic_chisel.page0.title": "Runic Chisel",
-  "modonomicon.runology.guidebook.basics.runic_chisel.page0.text": "While I know about runes, I do not have a method to create them, a Runic Chisel will work, to obtain one, I will have to imbue a gold chisel with Shattered Flow.",
+  "modonomicon.runology.guidebook.basics.runic_chisel.page0.text": "While I know about runes, I do not have a method to create them. A gold chisel imbued with Shattered Flow will work.",
   "modonomicon.runology.guidebook.shards.shattered_flow.name": "Shattered Flow",
   "modonomicon.runology.guidebook.shards.shattered_flow.page0.title": "Shattered Flow",
-  "modonomicon.runology.guidebook.shards.shattered_flow.page0.text": "That energy I felt nearby a Shatter... It was powerful yet dangerous and otherworldly, this energy... I will call it \"Shattered Flow\" however I will need a method to move it around, Shattered Focuses and Shattered Relays will work!",
+  "modonomicon.runology.guidebook.shards.shattered_flow.page0.text": "That energy I felt nearby a Shatter... It was powerful, yet dangerous and otherworldly. This energy... I will call it \"Shattered Flow\". I will need a method to move it around - Shattered Focuses and Relays will work!",
   "modonomicon.runology.guidebook.shards.shattered_infuser.name": "Shattered Infuser",
   "modonomicon.runology.guidebook.shards.shattered_infuser.page0.title": "Shattered Infuser",
-  "modonomicon.runology.guidebook.shards.shattered_infuser.page0.text": "Now that I am able to move around Shattered Flow, It may be useful to be able to charge items with it without having to walk all the way to a Shatter, the Shattered Infuser will allow me to do this at the cost of 50 Shattered Flow to run.",
+  "modonomicon.runology.guidebook.shards.shattered_infuser.page0.text": "Now that I am able to move around Shattered Flow, it may be useful to imbue items without having to walk all the way to a Shatter. The Shattered Infuser will allow me to do just this! It requires 50 Shattered Flow to run.",
   "modonomicon.runology.guidebook.basics.shatter_reader.name": "Shatter Reader",
   "modonomicon.runology.guidebook.basics.shatter_reader.page0.title": "Shatter Reader",
-  "modonomicon.runology.guidebook.basics.shatter_reader.page0.text": "With how Shatters output a limited number of Shattered Flow and have stability to them, it may be useful to create a tool to let me measure a Shatters Stability, Power, and Output.",
+  "modonomicon.runology.guidebook.basics.shatter_reader.page0.text": "With how Shatters output a limited quantity of Shattered Flow and have stability to them, it may be useful to create a tool to let me measure this. With this Reader, I can see a Shatter's Stability, Power, and Output.",
   "modonomicon.runology.guidebook.basics.shatterstone_runes.name": "Shatterstone Runes",
   "modonomicon.runology.guidebook.basics.shatterstone_runes.page0.title": "Shatterstone Runes",
   "modonomicon.runology.guidebook.basics.shatterstone_runes.page0.text": "Using the Runic Chisel, I can carve runes into Shatterstone, allowing me to channel Shattered Flow properly.",
   "modonomicon.runology.guidebook.basics.reality_reshaper.name": "Reality Reshaper",
   "modonomicon.runology.guidebook.basics.reality_reshaper.page0.title": "Reality Reshaper",
-  "modonomicon.runology.guidebook.basics.reality_reshaper.page0.text": "While Shatters are useful, sometimes they may be created at an inconvenient location. This Reality Reshaper structure will allow me to remove a Shatter and I might even gain something incredibly useful... although... I feel as if it wont go peacefully...",
+  "modonomicon.runology.guidebook.basics.reality_reshaper.page0.text": "While Shatters are useful, sometimes they may be created at an inconvenient location. This Reality Reshaper structure will allow me to remove a Shatter and I might even gain something incredibly useful... although... I feel as if it won't go peacefully...",
   "modonomicon.runology.guidebook.shards.shattered_shard.name": "Shattered Shard",
   "modonomicon.runology.guidebook.shards.shattered_shard.page0.title": "Shattered Shard",
-  "modonomicon.runology.guidebook.shards.shattered_shard.page0.text": "Shattered Shards... A physical manifestation of shattered flow. Utilizing this may be the key to more advanced magic.",
+  "modonomicon.runology.guidebook.shards.shattered_shard.page0.text": "Shattered Shards... a physical manifestation of shattered flow. Utilizing this may be the key to more advanced magic.",
   "modonomicon.runology.guidebook.shards.blink_boots.name": "Blink Boots",
   "modonomicon.runology.guidebook.shards.blink_boots.page0.title": "Blink Boots",
-  "modonomicon.runology.guidebook.shards.blink_boots.page0.text": "Shattered Shards, when combined with gold, I can make boots capable of letting me teleport forwards, I will call this form of teleportation a \"Blink\"",
+  "modonomicon.runology.guidebook.shards.blink_boots.page0.text": "I can make boots capable of letting me \"blink\" forwards, by pairing a pair of gold boots with Shattered Shards.",
   "modonomicon.runology.guidebook.shards.shatter_coil.name": "Shatter Coil",
   "modonomicon.runology.guidebook.shards.shatter_coil.page0.title": "Shatter Coil",
-  "modonomicon.runology.guidebook.shards.shatter_coil.page0.text": "Utilizing most of what I have learned so far about Shattered Flow, I have made a device capable of zapping every living thing that comes near it except for me and other people, it will however cost 10 Shattered Flow to run.",
+  "modonomicon.runology.guidebook.shards.shatter_coil.page0.text": "Utilizing most of what I have learned so far about Shattered Flow, I have made a device capable of zapping every living thing that comes near it except for those like me. It will cost 10 Shattered Flow to run.",
 
   "advancements.runology.runology.title": "Runology",
   "advancements.runology.runology.description": "Runes powered by another world...",
-  "advancements.runology.shatter.title": "Shatters",
+  "advancements.runology.shatter.title": "What Is This and How Do I Get Rid of It?",
   "advancements.runology.shatter.description": "Discover a shatter in the world",
   "advancements.runology.shatterstone.title": "Shatterstone",
   "advancements.runology.shatterstone.description": "Obtain Shatterstone",
@@ -94,7 +94,7 @@
   "runology.rune_types.runology.shape": "Shape",
   "runology.rune_types.runology.motion": "Motion",
 
-  "misc.runology.power_activate": "I feel power flowing through my body, building up at my fists, whatever this power is... It may be what is needed.",
+  "misc.runology.power_activate": "I feel power flowing through my body, building up at my fists. Whatever this is... it may be what is needed.",
 
   "key.categories.runology.runology": "Runology",
   "key.runology.blink": "Blink",
