--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -54,6 +54,14 @@
   "modonomicon.runology.guidebook.basics.basic_runes.name": "Basic Runes",
   "modonomicon.runology.guidebook.basics.basic_runes.page0.title": "Basic Runes",
   "modonomicon.runology.guidebook.basics.basic_runes.page0.text": "There are 4 runes I can utilize to manipulate the world: [#](ff5d00)Heat[#](), [#](00d1ff)Frost[#](), [#](00ff00)Shape[#](), and [#](ffd100)Motion[#](). Utilizing these 4 is powerful but there has to be more...",
+  "modonomicon.runology.guidebook.basics.basic_runes.page2.title": "Heat Rune",
+  "modonomicon.runology.guidebook.basics.basic_runes.page2.text": "The [#](ff5d00)Heat Rune[#]() is the simplest to use and manipulates warmth. It may be useful to test the limits of what I can do with this in the future.",
+  "modonomicon.runology.guidebook.basics.basic_runes.page3.title": "Frost Rune",
+  "modonomicon.runology.guidebook.basics.basic_runes.page3.text": "The [#](00d1ff)Frost Rune[#]() manipulates coldness, The opposite of the [#](ff5d00)Heat Rune[#](), This rune is simple to use however that doesn't mean it isn't useful.",
+  "modonomicon.runology.guidebook.basics.basic_runes.page4.title": "Shape Rune",
+  "modonomicon.runology.guidebook.basics.basic_runes.page4.text": "The [#](00ff00)Shape Rune[#]() manipulates the structure of objects, This rune has great power however is the most difficult to use. It may theoretically be possible to manipulate the structure of molecules however messing with objects on that small of a scale may be difficult.",
+  "modonomicon.runology.guidebook.basics.basic_runes.page5.title": "Motion Rune",
+  "modonomicon.runology.guidebook.basics.basic_runes.page5.text": "The [#](ffd100)Motion Rune[#]() manipulates movement of all forms, This rune is a bit complex but not too difficult to use. It may theoretically be possible to manipulate the movement of time however if it is even possible, it certainly will not be easy.",
   "modonomicon.runology.guidebook.basics.shatterstone.name": "Shatterstone",
   "modonomicon.runology.guidebook.basics.shatterstone.page0.title": "Shatterstone",
   "modonomicon.runology.guidebook.basics.shatterstone.page0.text": "This stone... I have never seen it before! But now that I've discovered a shatter, I see that it's everywhere in the caves... is there more to this world than what I can see?",
