--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -24,6 +24,7 @@
   "block.runology.medium_shattered_crystal_bud": "Medium Shattered Crystal Bud",
   "block.runology.small_shattered_crystal_bud": "Small Shattered Crystal Bud",
   "block.runology.heat_focus": "Heat Focus",
+  "block.runology.shattered_block": "Shattered Block",
 
   "item.runology.gold_chisel": "Gold Chisel",
   "item.runology.runic_chisel": "Runic Chisel",
