--- a/src/main/resources/assets/runology/lang/en_us.json
+++ b/src/main/resources/assets/runology/lang/en_us.json
@@ -25,6 +25,7 @@
   "block.runology.small_shattered_crystal_bud": "Small Shattered Crystal Bud",
   "block.runology.heat_focus": "Heat Focus",
   "block.runology.shattered_block": "Shattered Block",
+  "block.runology.reality_focus": "Reality Focus",
 
   "item.runology.gold_chisel": "Gold Chisel",
   "item.runology.runic_chisel": "Runic Chisel",
